IE 11 scrollbar fix; closes #99

--- a/public/css/collabjs.less
+++ b/public/css/collabjs.less
@@ -10,6 +10,8 @@ body {
   padding-bottom: 70px;
   color: #383e4b;
   background: #f5f5f5;
+  /* IE 11 scrollbar fix */
+  -ms-overflow-style: scrollbar;
 }
 
 small.project-status {
